--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -1,6 +1,9 @@
+html {
+    font-size: 20px;
+}
+
 body {
     font-family: "Arial", "Meiryo", sans-serif;
-    font-size: 20px;
     text-align: center;
 }
 
@@ -9,7 +12,7 @@ body {
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 2rem;
     letter-spacing: 1.2em;
     text-shadow: 2px 2px 2px gray;
     border-bottom: solid 3px rgb(115, 115, 114);
