--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -41,7 +41,7 @@ h2 {
 
 h2::before{
     content: "●";
-    color: rgb(236, 111, 139);
+    color: rgb(239, 111, 139);
 }
 
 .contents p:nth-of-type(2n)::first-letter {
@@ -81,7 +81,7 @@ a:hover {
     }
 
     #parent {
-        flex-wrap: wrap;
+        display: block;
     }
 
     .contents {
