--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -81,7 +81,9 @@ a:hover {
     }
 
     #parent {
-        display: block;
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-start;
     }
 
     .contents {
