--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -81,9 +81,8 @@ a:hover {
     }
 
     #parent {
-        display: flex;
-        flex-wrap: wrap;
-        align-content: flex-start;
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     .contents {
